--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -120,7 +120,7 @@
   }
 }
 
-.contacts__field-line {
+.contacts__field--line {
   border-bottom: 1px solid $color-brand;
   text-decoration: none;
   color: #000000;
