--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -27,8 +27,8 @@
   }
 }
 
-.menu__list-new,
-.menu__list-delivery {
+.menu__list--new,
+.menu__list--delivery {
   display: none;
 
   @media (min-width: $desktop-width) {
@@ -36,7 +36,7 @@
   }
 }
 
-.menu__list-new {
+.menu__list--new {
   @media (min-width: $desktop-width) {
     display: flex;
     margin-right: auto;
@@ -72,7 +72,7 @@
   }
 }
 
-.menu__list-delivery {
+.menu__list--delivery {
   @media (min-width: $tablet-width) {
     display: block;
     order: 2;
@@ -84,7 +84,7 @@
   }
 }
 
-.menu__link-delivery {
+.menu__link--delivery {
   @media (min-width: $tablet-width) {
     font-size: 15px;
     font-weight: normal;
@@ -93,7 +93,7 @@
   }
 }
 
-.menu__list-catalog-order {
+.menu__list--catalog-order {
   @media (min-width: $tablet-width) {
     margin-right: auto;
     order: 1;
@@ -107,7 +107,7 @@
   }
 }
 
-.menu__link-catalog {
+.menu__link--catalog {
   @media (min-width: $tablet-width) {
     margin-right: 37px;
     font-size: 15px;
@@ -119,7 +119,7 @@
   }
 }
 
-.menu__link-order {
+.menu__link--order {
   @media (min-width: $tablet-width) {
     font-size: 15px;
   }
@@ -129,7 +129,7 @@
   }
 }
 
-.menu__link-new {
+.menu__link--new {
   @media (min-width: $desktop-width) {
     &:first-of-type {
       margin-right: 64px;
@@ -138,7 +138,7 @@
   }
 }
 
-.menu__link-basket {
+.menu__link--basket {
   &::before {
     content: "";
     position: absolute;
@@ -216,8 +216,8 @@
   background: url("");
 }
 
-.menu__opened .menu__list-search,
-.menu__opened .menu__list-catalog-order {
+.menu__opened .menu__list--search,
+.menu__opened .menu__list--catalog-order {
   @media (max-width: $mobile-width-only) {
     display: block;
   }
@@ -228,8 +228,8 @@
   display: none;
 }
 
-.menu__no-js .menu__list-search,
-.menu__no-js .menu__list-catalog-order {
+.menu__no-js .menu__list--search,
+.menu__no-js .menu__list--catalog-order {
   @media (max-width: $mobile-width-only) {
     display: block;
   }
