--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -119,14 +119,14 @@
 
 @keyframes modal-animate {
   0% {
-    transform: translateY(-10000px);
+    transform: translateY(-10000px) scale(0);
   }
 
   50% {
-    transform: translateY(100px);
+    transform: translateY(100px) scale(1.5);
   }
 
   100% {
-    transform: translateY(0);
+    transform: translateY(0) scale(1);
   }
 }
