--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -110,7 +110,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-  animation: modal-animate 1s ease;
+  animation: modal-animate 0.5s ease;
 }
 
 .modal-show {
@@ -119,14 +119,10 @@
 
 @keyframes modal-animate {
   0% {
-    transform: translateY(-10000px) scale(0);
-  }
-
-  50% {
-    transform: translateY(100px) scale(1.5);
+    transform: scale(2) translateY(100px);
   }
 
   100% {
-    transform: translateY(0) scale(1);
+    transform: scale(1) translateY(0px);
   }
 }
