--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -44,6 +44,8 @@
   font-size: 15px;
   line-height: 2;
   color: $color-danger;
+  margin-left: auto; // Для FireFox
+  margin-right: auto; // Для FireFox
   margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
@@ -119,10 +121,10 @@
 
 @keyframes modal-animate {
   0% {
-    transform: scale(2) translateY(100px);
+    transform: translateY(-100px) scale(2);
   }
 
   100% {
-    transform: scale(1) translateY(0px);
+    transform: translateY(0) scale(1);
   }
 }
