creates picture tag, picturefill.js, fixes bugs, add academy img and other..

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -3,3 +3,4 @@ $color-brand: #63d1bb;
 $tablet-width: 768px;
 $mobile-width-only: $tablet-width - 1;
 $desktop-width: 1150px;
+$retina-dppx: 1.5dppx;
