--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,7 @@
 @import "base/variables";
 @import "base/mixins";
 @import "base/typography";
-@import "blocks/fonts";
+@import "base/fonts";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/handwork";
