--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -47,7 +47,13 @@
   }
 }
 
-.footer__ccopyright-text {
+.footer__academy {
+  padding-top: 7px;
+  width: 27px;
+  height: 34px;
+}
+
+.footer__copyright-text {
   font-size: 19px;
   line-height: 0.95;
   margin-top: 10px;
