--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -4,6 +4,14 @@
 
 .header__logo {
   display: flex;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 2px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 8px;
+  }
 }
 
 .header__inner {
