--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -5,7 +5,9 @@
 .logo__image {
   width: 86px;
   height: 35px;
-  margin: 22px auto;
+  margin: 0 auto;
+  margin-top: 22px;
+  margin-bottom: 14px;
   cursor: pointer;
 
   &:hover {
@@ -20,6 +22,7 @@
   @media (min-width: $tablet-width) {
     width: 112px;
     height: 46px;
+    margin: 18px auto;
   }
 
   @media (min-width: $desktop-width) {
