creates svg-icon.scss, fixes currentColor, changes class names in about-us and search blocks

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "base/mixins";
 @import "base/typography";
 @import "base/fonts";
+@import "blocks/svg-icon";
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/handwork";
