fixes content inner

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -17,7 +17,7 @@
 }
 
 .contacts__inner-content {
-  @media (max-width: $desktop-width) {
+  @media (max-width: $tablet-width) {
     @include inner;
   }
 }
