--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,12 +1,15 @@
 .reviews {
-  margin-bottom: 85px;
+  position: relative;
+  margin-bottom: 18px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 162px;
+    margin-bottom: 62px;
+    padding-bottom: 102px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 170px;
+    margin-bottom: 85px;
+    padding-bottom: 88px;
   }
 }
 
@@ -33,13 +36,17 @@
 .reviews__inner {
   @include inner;
 
+  @media (max-width: $mobile-width-only) {
+    padding-bottom: 34px;
+  }
+
   @media (min-width: $tablet-width) {
+    padding-bottom: 60px;
     background: url("../img/review@1x.jpg") no-repeat 0% 75%;
   }
 
   @media (min-width: $desktop-width) {
     background: url("../img/review@1x.jpg") 6% 5% no-repeat;
-    padding-bottom: 60px;
   }
 }
 
@@ -71,7 +78,7 @@
   @media (min-width: $desktop-width) {
     width: 770px;
     margin-bottom: 38px;
-    line-height: 1.83;
+    line-height: 1.73;
   }
 }
 
@@ -114,10 +121,15 @@
 }
 
 .reviews__slide {
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 40px;
+  margin-right: 20px;
+  width: 136px;
 
   @media (max-width: $mobile-width-only) {
     text-align: center;
+    width: 100%;
   }
 }
 
@@ -132,12 +144,15 @@
 
 .reviews__btn-prev,
 .reviews__btn-next {
-  width: 130px;
-  height: 52px;
+  min-height: 52px;
   padding: 0;
   border: solid 1px #ececec;
   background-color: transparent;
   cursor: pointer;
+
+  @media (max-width: $mobile-width-only) {
+    width: 130px;
+  }
 
   @media (min-width: $tablet-width) {
     border: none;
