--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,7 +6,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 48px;
+    margin-bottom: 52px;
   }
 }
 
@@ -49,19 +49,21 @@
     &::after {
       content: "";
       position: absolute;
-      top: 0;
-      right: 0;
-      background-image: url("https://via.placeholder.com/150x150");
-      width: 50px;
-      height: 50px;
+      top: -20px;
+      right: 4px;
+      background-image: url("../../img/icon-flag.svg");
+      background-repeat: no-repeat;
+      width: 47px;
+      height: 81px;
     }
   }
 
   @media (min-width: $desktop-width) {
     &::after {
-      top: 5px;
-      left: -121px;
+      top: -8px;
+      left: -108px;
     }
+
     float: left;
     margin-top: 60px;
     margin-bottom: 50px;
@@ -79,7 +81,7 @@
 
   @media (min-width: $tablet-width) {
     width: 632px;
-    margin-bottom: 33px;
+    margin-bottom: 28px;
   }
 
   @media (min-width: $desktop-width) {
