--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -13,6 +13,10 @@
     padding-top: 37px;
     padding-bottom: 40px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 46px;
+  }
 }
 
 .footer__copyright {
@@ -47,12 +51,6 @@
   }
 }
 
-.footer__academy {
-  padding-top: 7px;
-  width: 27px;
-  height: 34px;
-}
-
 .footer__copyright-text {
   font-size: 19px;
   line-height: 0.95;
@@ -65,5 +63,5 @@
 }
 
 .footer__social {
-  padding-top: 30px;
+  padding-top: 22px;
 }
