--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -1,4 +1,5 @@
 .handwork {
+  position: relative;
   margin-bottom: 30px;
   background: url("../img/hero-mobile@1x.jpg") no-repeat center top rgb(249, 249, 249);
 
@@ -11,7 +12,7 @@
 
   @media (min-width: $desktop-width) {
     background: url("../img/hero-desktop@1x.jpg") no-repeat center top rgb(249, 249, 249);
-    margin-bottom: 118px;
+    margin-bottom: 108px;
   }
 }
 
@@ -71,6 +72,10 @@
     line-height: 1.5;
     padding: 25px 0 40px 0;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 25px 0 50px 0;
+  }
 }
 
 .handwork__inner.handwork__flex--g {
@@ -87,7 +92,7 @@
   }
 }
 
-.handwork__image-itn {
+.handwork__image-interior {
   padding-right: 10px;
 
   @media (min-width: $tablet-width) {
@@ -126,7 +131,7 @@
   }
 }
 
-.handwork__image-itn,
+.handwork__image-interior,
 .handwork__image-toys {
   opacity: 0.2;
 }
