--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -20,3 +20,12 @@
     margin-right: 40px;
   }
 }
+
+.social__link {
+  color: #000000;
+}
+
+.social__icon-cart {
+  color: #231f20;
+  opacity: 0.2;
+}
