--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -51,7 +51,7 @@
       position: absolute;
       top: -20px;
       right: 4px;
-      background-image: url("../../img/icon-flag.svg");
+      background-image: url("../img/icon-flag.svg");
       background-repeat: no-repeat;
       width: 47px;
       height: 81px;
@@ -153,16 +153,9 @@
   min-height: 457px;
   margin-bottom: 40px;
 
-  @media (max-width: $mobile-width-only) {
-    // width: 320px;
-    // margin-left: -30px;
-  }
-
   @media (min-width: $tablet-width) {
-    // width: 768px;
     font-size: 17px;
     line-height: 1.76;
-    // margin-left: -50px;
     margin-bottom: 56px;
   }
 
@@ -177,11 +170,11 @@
   display: none;
 }
 
-.contacts__pin {
+.contacts__map-pin {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50px, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .contacts__btn {
