--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -65,3 +65,16 @@
 .footer__social {
   padding-top: 22px;
 }
+
+
+.footer__academy-icon {
+  vertical-align: bottom;
+  width: 27px;
+  height: 34px;
+  margin-top: 18px;
+  color: $color-brand;
+
+  @media (max-width: $mobile-width-only) {
+    margin-top: 5px;
+  }
+}
