--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,10 +1,11 @@
 .reviews {
   position: relative;
-  margin-bottom: 18px;
+  padding-bottom: 26px;
+  margin-bottom: 26px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 62px;
-    padding-bottom: 102px;
+    padding-bottom: 40px;
   }
 
   @media (min-width: $desktop-width) {
@@ -42,7 +43,7 @@
 
   @media (min-width: $tablet-width) {
     padding-bottom: 60px;
-    background: url("../img/review@1x.jpg") no-repeat 0% 75%;
+    background: url("../img/review@1x.jpg") no-repeat 0% 5%;
   }
 
   @media (min-width: $desktop-width) {
@@ -179,5 +180,20 @@
   @media (min-width: $desktop-width) {
     margin-top: 14px;
     min-height: 53px;
+  }
+}
+
+.reviews__line-icon {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  color: #e6e7e8;
+  width: 100%;
+  height: 22px;
+  transform: translateX(-50%) rotate(180deg);
+
+  @media (min-width: $desktop-width) {
+    width: 1050px;
   }
 }
