--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -25,7 +25,7 @@
     position: absolute;
     bottom: 0;
     left: 50%;
-    width: 100%;
+    width: 1150px;
     height: 22px;
     transform: translateX(-50%);
   }
