--- a/source/css/style.css
+++ b/source/css/style.css
@@ -354,7 +354,7 @@ img {
       position: absolute;
       bottom: 0;
       left: 50%;
-      width: 100%;
+      width: 1150px;
       height: 22px;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); } }
